[package]
name = "xix"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]

[dependencies]
hyper = "0.12"
h2 = "0.1"
futures = "0.1.21"
log = "0.4"
env_logger = "0.5.10"
tokio = "0.1.7"
openssl = "0.10.10"
tokio-openssl = "0.2"
http = "0.1"
url = "1.7"
der-parser = "0.5"
nom =  "3.1"
bs58 = "0.2"
ed25519-dalek = "^0.6"
sha2 = "0.7"
crc8 = "0.1"
bytes = "*"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

