[package]
name = "xix"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]

[dependencies]
hyper = "0.12"
h2 = "0.1"
futures = "0.1.21"
log = "0.4"
env_logger = "0.5.10"
tokio = "0.1.7"
openssl = "0.10.10"
tokio-openssl = "0.2"
http = "0.1"
url = "1.7"
bytes = "*"
x0 = {path = "x0"}

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[replace]
"h2:0.1.9" = {git = "https://github.com/aep/h2.git"}

